--- a/front/src/components/ProgramSelection/styles.module.css
+++ b/front/src/components/ProgramSelection/styles.module.css
@@ -1,22 +1,66 @@
 .controls_holder {
     display: flex;
+    position: fixed;
+    top: -3px;
+    padding-top: 8px;
+    z-index: 100;
+}
+
+.controls_bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: -3px;
+    padding-top: 8px;
+    //background-color: rgba(255, 255, 255, 0.76);
+    //filter: blur(10px);
+}
+
+.controls_placeholder_block {
+    height: 40px;
+}
+
+.content_holder {
+    display: flex;
+    border: 1px solid rgba(0, 0, 0, 0.24);
+    background-color: white;
+    min-height: 120px;
+    min-width: 100px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+.filters_holder {
+    position: fixed;
+}
+
+.filters_placeholder_block {
+    width: 310px;
+}
+
+.placeholder_block {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    color: rgba(128, 128, 128, 0.62);
 }
 
 .combo_box_holder {
     display: flex;
     justify-content: left;
     align-items: end;
-    width: 90%;
     margin-right: 5px;
-    gap: 5px;
-    flex-wrap: wrap;
 }
 
 .compare_btn_holder {
     display: flex;
     justify-content: right;
     align-items: center;
-    width: 10%;
     margin: 2px 10px 2px 5px;
 }
 
