Program selection is about to be finished

--- a/front/src/components/ProgramSelectionList/styles.module.css
+++ b/front/src/components/ProgramSelectionList/styles.module.css
@@ -21,8 +21,8 @@
 
 .cards_holder {
     display: flex;
-    gap: 10px;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 20px;
     flex-wrap: wrap;
     width: 100%;
     max-width: 1000px;
