--- a/front/src/components/ProgramCard/styles.module.css
+++ b/front/src/components/ProgramCard/styles.module.css
@@ -6,8 +6,6 @@
     display: flex;
     flex-direction: column;
     background: linear-gradient(71deg, #ffd562, #ffce85, #fddf95);
-    backdrop-filter: blur(7px);
-    -webkit-backdrop-filter: blur(7px);
     transition: transform .15s ease-out;
     overflow: hidden;
 }
@@ -56,7 +54,7 @@ li::marker {
     padding-right: 20px;
     min-height: 30px;
     gap: 10px;
-    background: linear-gradient(180deg, rgba(244, 81, 30, 0), rgba(244, 81, 30, 0.11));
+    //background: linear-gradient(180deg, rgba(244, 81, 30, 0), rgba(244, 81, 30, 0.11));
 }
 
 .card_footer_item_holder {
@@ -75,4 +73,12 @@ li::marker {
     width: 18px;
     height: 18px;
     margin-right: 2px;
+}
+
+.selected_card {
+    background: linear-gradient(71deg, #d3ff62, #bdff38, #a8ff7d);
+}
+
+.blocked_card {
+    opacity: 0.6;
 }
