--- a/front/src/components/ProgramSelection/styles.module.css
+++ b/front/src/components/ProgramSelection/styles.module.css
@@ -38,6 +38,7 @@
 
 .filters_placeholder_block {
     width: 310px;
+    min-width: 310px;
 }
 
 .placeholder_block {
@@ -50,57 +51,6 @@
     color: rgba(128, 128, 128, 0.62);
 }
 
-.combo_box_holder {
-    display: flex;
-    justify-content: left;
-    align-items: end;
-    margin-right: 5px;
-}
-
-.compare_btn_holder {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    margin: 2px 10px 2px 5px;
-}
-
-.compare_btn {
-    display: inline-block;
-    border-radius: 4px;
-    background-color: #f4511e;
-    border: none;
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 18px;
-    padding: 5px;
-    width: 120px;
-    height: 40px;
-    transition: all 0.5s;
-    cursor: pointer;
-}
-
-.compare_btn span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-    padding-top: 1px;
-}
-
-.compare_btn span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.compare_btn:hover span {
-    padding-right: 15px;
-}
-
-.compare_btn:hover span:after {
-    opacity: 1;
-    right: 0;
+.info_holder {
+    margin-bottom: 6px;
 }
