--- a/front/src/components/ProgramSelection/styles.module.css
+++ b/front/src/components/ProgramSelection/styles.module.css
@@ -1,39 +1,16 @@
-.controls_holder {
-    display: flex;
-    position: fixed;
-    top: -3px;
-    padding-top: 8px;
-    z-index: 100;
-}
-
-.controls_bg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    top: -3px;
-    padding-top: 8px;
-    //background-color: rgba(255, 255, 255, 0.76);
-    //filter: blur(10px);
-}
-
-.controls_placeholder_block {
-    height: 40px;
-}
-
 .content_holder {
     display: flex;
     border: 1px solid rgba(0, 0, 0, 0.24);
     background-color: white;
-    min-height: 120px;
+    min-height: 300px;
     min-width: 100px;
     padding-top: 10px;
     padding-right: 10px;
-    padding-bottom: 10px;
 }
 
 .filters_holder {
     position: fixed;
+    margin-left: 4px;
 }
 
 .filters_placeholder_block {
@@ -51,6 +28,6 @@
     color: rgba(128, 128, 128, 0.62);
 }
 
-.info_holder {
-    margin-bottom: 6px;
+.university_holder {
+    margin-bottom: 10px;
 }
