--- a/front/src/components/ProgramSelectionList/styles.module.css
+++ b/front/src/components/ProgramSelectionList/styles.module.css
@@ -1,22 +1,18 @@
 .content_holder {
     display: flex;
     flex-direction: column;
-    border: 1px solid rgba(0, 0, 0, 0.24);
-    background-color: white;
+    //border: 1px solid rgba(0, 0, 0, 0.24);
+    //background-color: white;
     min-height: 120px;
     min-width: 100px;
-    padding: 10px;
+    padding: 5px 10px;
 }
 
 .top_block {
     display: flex;
-    margin-bottom: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.search_block {
-    width: 30px;
+    margin-bottom: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .cards_holder {
