--- a/front/src/components/ProgramsSummary/styles.module.css
+++ b/front/src/components/ProgramsSummary/styles.module.css
@@ -2,10 +2,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 300px;
+    height: 310px;
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.24);
     border-radius: 12px;
+}
+
+.chosen_label {
+    opacity: 0.75;
+    margin-top: 12px;
+    margin-left: 15px;
+    font-size: 18px;
 }
 
 .compare_btn_holder {
@@ -13,7 +20,7 @@
     justify-content: right;
     align-items: center;
     margin-top: 3px;
-    margin-bottom: 3px;
+    margin-bottom: 7px;
 }
 
 .compare_btn {
@@ -57,6 +64,15 @@
     right: 0;
 }
 
+.btn_disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
+.btn_disabled span {
+    cursor: not-allowed;
+}
+
 .list_holder {
     width: 100%;
     height: 100%;
@@ -68,19 +84,21 @@
     background: linear-gradient(71deg, #d3ff62, #bdff38, #a8ff7d);
     margin-left: 15px;
     margin-right: 15px;
-    margin-top: 20px;
+    margin-top: 15px;
     border-radius: 10px 10px
 }
 
 .university_holder {
     display: flex;
     flex-direction: column;
-    padding: 3px;
+    padding: 4px;
+    flex: 1;
 }
 
 .program_name {
-    font-size: 14px;
+    font-size: 12px;
     margin-left: 4px;
+    margin-top: 2px;
 }
 
 .remove_block {
@@ -100,4 +118,13 @@
 .remove_img {
     height: 30px;
     width: 30px;
+}
+
+.help_msg {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 0 5px 2px 5px;
+    font-size: 12px;
+    opacity: 0.5;
 }
