--- a/front/src/components/ProgramSelection/styles.module.css
+++ b/front/src/components/ProgramSelection/styles.module.css
@@ -26,6 +26,7 @@
     justify-content: center;
     align-items: center;
     color: rgba(128, 128, 128, 0.62);
+    padding-bottom: 15px;
 }
 
 .university_holder {
