--- a/front/src/components/ProgramSelectionList/styles.module.css
+++ b/front/src/components/ProgramSelectionList/styles.module.css
@@ -6,6 +6,13 @@
     min-height: 120px;
     min-width: 100px;
     padding: 5px 10px;
+    width: 100%;
+}
+
+.not_found {
+    margin: auto;
+    padding-bottom: 15px;
+    opacity: 0.6;
 }
 
 .top_block {
@@ -39,4 +46,5 @@
     display: flex;
     justify-content: center;
     margin-top: 16px;
+    margin-bottom: 5px;
 }
