--- a/front/src/pages/ProgramComparison/styles.module.css
+++ b/front/src/pages/ProgramComparison/styles.module.css
@@ -13,6 +13,26 @@
 
 .back_btn_holder {
     width: 100%;
+    display: flex;
+    justify-content: end;
+    margin-bottom: -5px;
+}
+
+.back_btn {
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 14px;
+    padding: 5px;
+    width: 70px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.back_btn:hover {
+    background-color: #ff3900;
 }
 
 .top_label {
@@ -22,7 +42,7 @@
 
 .program_names {
     border: #2f2f2f 1px solid;
-    background: white;
+    background: linear-gradient(71deg, rgba(211, 255, 98, 0.5), rgba(189, 255, 56, 0.5), rgba(168, 255, 125, 0.5));
     width: 100%;
     display: flex;
     align-items: center;
@@ -47,10 +67,19 @@
     margin-top: 3px;
 }
 
-.divider {
+.vr_divider {
     width: 1px;
     height: 100%;
     border: black 1px solid;
+}
+
+.hr_divider {
+    height: 1px;
+    background: black;
+    width: 90%;
+    align-self: center;
+    margin-top: 15px;
+    margin-bottom: 20px;
 }
 
 .table_holder {
@@ -60,13 +89,13 @@
     border-left: black 0.5px solid;
     border-right: black 0.5px solid;
     border-bottom: black 0.5px solid;
-    align-items: center;
     background: white;
 }
 
 .table_label {
     font-size: 18px;
-    margin: 5px 10px;
+    margin: 6px 10px 7px 10px;
+    align-self: center;
 }
 
 .table_labels {
@@ -100,7 +129,9 @@
     display: flex;
     width: 100%;
     align-items: center;
-    font-size: 14px;
+    font-size: 15px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .table_left_data {
@@ -120,4 +151,25 @@
     margin-left: 15px;
     margin-right: 10px;
     width: 100%;
+}
+
+.pie_charts_holder {
+    display: flex;
+}
+
+.pie_chart_holder {
+    display: flex;
+    width: 100%;
+    height: 260px;
+}
+
+.line_charts_holder {
+    display: flex;
+    margin-top: 10px;
+}
+
+.line_chart_holder {
+    display: flex;
+    width: 100%;
+    height: 350px;
 }
