--- a/front/src/pages/ProgramComparison/styles.module.css
+++ b/front/src/pages/ProgramComparison/styles.module.css
@@ -37,10 +37,16 @@
 
 .top_label {
     font-size: 20px;
+    padding: 2px 2px 3px 2px;
     margin-bottom: 5px;
+    text-align: center;
+    max-width: 450px;
+    width: 100%;
+    border-radius: 12px;
 }
 
 .program_names {
+    border-radius: 15px;
     border: #2f2f2f 1px solid;
     background: linear-gradient(71deg, rgba(211, 255, 98, 0.5), rgba(189, 255, 56, 0.5), rgba(168, 255, 125, 0.5));
     width: 100%;
@@ -89,6 +95,7 @@
     border-left: black 0.5px solid;
     border-right: black 0.5px solid;
     border-bottom: black 0.5px solid;
+    border-radius: 0 0 15px 15px;
     background: white;
 }
 
