--- a/front/src/components/ProgramsSummary/styles.module.css
+++ b/front/src/components/ProgramsSummary/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 310px;
+    min-height: 310px;
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.24);
     border-radius: 12px;
@@ -17,7 +17,6 @@
 
 .compare_btn_holder {
     display: flex;
-    justify-content: right;
     align-items: center;
     margin-top: 3px;
     margin-bottom: 7px;
@@ -76,6 +75,13 @@
 .list_holder {
     width: 100%;
     height: 100%;
+    min-height: 240px;
+}
+
+.bottom_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .info_holder {
@@ -127,4 +133,8 @@
     margin: 0 5px 2px 5px;
     font-size: 12px;
     opacity: 0.5;
+}
+
+.help_msg_placeholder {
+    opacity: 0;
 }
