--- a/front/src/pages/ProgramsPage/styles.module.css
+++ b/front/src/pages/ProgramsPage/styles.module.css
@@ -14,7 +14,7 @@
     margin-left: 12px;
     margin-right: 50px;
     max-width: 230px;
-    height: 300px;
+    min-height: 300px;
     width: 23%;
     display: flex;
 }
